--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/2.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/2.md
@@ -4,265 +4,306 @@
 
 ### Truy cập Cisco Catalyst Switch CLI
 
-1. asd
+1. In what modes can you type the command show mac address-table and expect to get a response with MAC table entries? (Choose two answers.)
    
-   - [ ] asd
+   - [ ] User mode
    
-   - [ ] asd
+   - [ ] Enable mode
    
-   - [ ] asd
+   - [ ] Global configuration mode
    
-   - [ ] asd
+   - [ ] Interface configuration mode
 
-2. asd
+2. In which of the following modes of the CLI could you type the command reload and expect the switch to reboot?
    
-   - [ ] asd
+   - [ ] User mode
    
-   - [ ] asd
+   - [ ] Enable mode
    
-   - [ ] asd
+   - [ ] Global configuration mode
    
-   - [ ] asd
+   - [ ] Interface configuration mode
 
-3. asd
+3. Which of the following is a difference between Telnet and SSH as supported by a Cisco switch?
    
-   - [ ] asd
+   - [ ] SSH encrypts the passwords used at login, but not other traffic; Telnet encrypts nothing.
    
-   - [ ] asd
+   - [ ] SSH encrypts all data exchange, including login passwords; Telnet encrypts nothing.
    
-   - [ ] asd
+   - [ ] Telnet is used from Microsoft operating systems, and SSH is used from UNIX and Linux operating systems.
    
-   - [ ] asd
+   - [ ] Telnet encrypts only password exchanges; SSH encrypts all data exchanges.
 
 ### Cấu hình phần mềm Cisco IOS
 
-4. asd
+4. What type of switch memory is used to store the configuration used by the switch when it is up and working?
    
-   - [ ] asd
+   - [ ] RAM
    
-   - [ ] asd
+   - [ ] ROM
    
-   - [ ] asd
+   - [ ] Flash
    
-   - [ ] asd
+   - [ ] NVRAM
+   
+   - [ ] Bubble
 
-5. asd
+5. What command copies the configuration from RAM into NVRAM?
    
-   - [ ] asd
+   - [ ] copy running-config tftp
    
-   - [ ] asd
+   - [ ] copy running-config tftp
    
-   - [ ] asd
+   - [ ] copy running-config start-up-config
    
-   - [ ] asd
+   - [ ] copy start-up-config running-config
+   
+   - [ ] copy startup-config running-config
+   
+   - [ ] copy running-config startup-config
 
-6. asd
+6. A switch user is currently in console line configuration mode. Which of the following would place the user in enable mode? (Choose two answers.)
    
-   - [ ] asd
+   - [ ] Using the exit command once
    
-   - [ ] asd
+   - [ ] Using the end command once
    
-   - [ ] asd
+   - [ ] Pressing the Ctrl+Z key sequence once
    
-   - [ ] asd
+   - [ ] Using the quit command
 
 ## 2. Phân tích về Ethernet LAN Switching
 
 ### Khái niệm LAN Switching
 
-1. asd
+1. Which of the following statements describes part of the process of how a switch decides to forward a frame destined for a known unicast MAC address ?
    
-   - [ ] asd
+   - [ ] It compares the unicast destination address to the bridging, or MAC address, table.
    
-   - [ ] asd
+   - [ ] It compares the unicast source address to the bridging, or MAC address, table.
    
-   - [ ] asd
+   - [ ] It forwards the frame out all interfaces in the same VLAN except for the incoming
+     interface.
    
-   - [ ] asd
+   - [ ] It compares the destination IP address to the destination MAC address.
+   
+   - [ ] It compares the frame’s incoming interface to the source MAC entry in the MAC address table.
 
-2. asd
+2. Which of the following statements describes part of the process of how a LAN switch decides to forward a frame destined for a broadcast MAC address?
    
-   - [ ] asd
+   - [ ] It compares the unicast destination address to the bridging, or MAC address, table.
    
-   - [ ] asd
+   - [ ] It compares the unicast source address to the bridging, or MAC address, table.
    
-   - [ ] asd
+   - [ ] It forwards the frame out all interfaces in the same VLAN except for the incoming
+     interface.
    
-   - [ ] asd
+   - [ ] It compares the destination IP address to the destination MAC address.
+   
+   - [ ] It compares the frame’s incoming interface to the source MAC entry in the MAC address table.
 
-3. asd
+3. Which of the following statements best describes what a switch does with a frame destined for an unknown unicast address?
    
-   - [ ] asd
+   - [ ] It forwards out all interfaces in the same VLAN except for the incoming interface.
    
-   - [ ] asd
+   - [ ] It forwards the frame out the one interface identified by the matching entry in the MAC address table.
    
-   - [ ] asd
+   - [ ] It compares the destination IP address to the destination MAC address.
    
-   - [ ] asd
+   - [ ] It compares the frame’s incoming interface to the source MAC entry in the MAC address table.
 
-4. asd
+4. Which of the following comparisons does a switch make when deciding whether a new MAC address should be added to its MAC address table?
    
-   - [ ] asd
+   - [ ] It compares the unicast destination address to the bridging, or MAC address, table.
    
-   - [ ] asd
+   - [ ] It compares the unicast source address to the bridging, or MAC address, table.
    
-   - [ ] asd
+   - [ ] It compares the VLAN ID to the bridging, or MAC address, table.
    
-   - [ ] asd
+   - [ ] It compares the destination IP address’s ARP cache entry to the bridging, or MAC address, table.
 
 ### Xác minh và phân tích Ethernet Switching
 
-5. asd
+5. A Cisco Catalyst switch has 24 10/100 ports, numbered 0/1 through 0/24. Ten PCs connect to the 10 lowest numbered ports, with those PCs working and sending data over the network. The other ports are not connected to any device. Which of the following answers lists facts displayed by the show interfaces status command?
    
-   - [ ] asd
+   - [ ] Port Ethernet 0/1 is in a connected state.
    
-   - [ ] asd
+   - [ ] Port Fast Ethernet 0/11 is in a connected state.
    
-   - [ ] asd
+   - [ ] Port Fast Ethernet 0/5 is in a connected state.
    
-   - [ ] asd
+   - [ ] Port Ethernet 0/15 is in a notconnected state.
 
-6. asd
+6. Consider the following output from a Cisco Catalyst switch
    
-   - [ ] asd
+   <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/04/02-07-45-04-Screenshot%202022-04-02%20074455.png" title="" alt="Screenshot 2022-04-02 074455.png" width="503">
    
-   - [ ] asd
+   Which of the following answers is true about this switch?
    
-   - [ ] asd
+   - [ ] The output proves that port Gi0/2 connects directly to a device that uses address 02BB.BBBB.BBBB.
    
-   - [ ] asd
-
+   - [ ] The switch has learned three MAC addresses since the switch powered on.
+   
+   - [ ] The three listed MAC addresses were learned based on the destination MAC address of frames forwarded by the switch.
+   
+   - [ ] 02CC.CCCC.CCCC was learned from the source MAC address of a frame that entered port Gi0/3.
 
 ## 3. Cấu hình cơ bản về quản lí Swith
 
 ### Bảo mật Switch CLI
 
-1. asd
+1. Imagine that you have configured the enable secret command, followed by the enable password command, from the console. You log out of the switch and log back in at the console. Which command defines the password that you had to enter to access privileged mode?
    
-   - [ ] asd
+   - [ ] enable password
    
-   - [ ] asd
+   - [ ] enable secret
    
-   - [ ] asd
+   - [ ] Neither
    
-   - [ ] asd
+   - [ ] The password command, if it is configured
 
-2. asd
+2. An engineer wants to set up simple password protection with no usernames for someswitches in a lab, for the purpose of keeping curious coworkers from logging in to the lab switches from their desktop PCs. Which of the following commands would be a useful part of that configuration?
    
-   - [ ] asd
+   - [ ] A login vty mode subcommand
    
-   - [ ] asd
+   - [ ] A password password console subcommand
    
-   - [ ] asd
+   - [ ] A login local vty subcommand
    
-   - [ ] asd
+   - [ ] A transport input ssh vty subcommand
 
-3. asd
+3. An engineer had formerly configured a Cisco 2960 switch to allow Telnet access so that the switch expected a password of mypassword from the Telnet user. The engineer then changed the configuration to support Secure Shell. Which of the following commands could have been part of the new configuration? (Choose two answers.)
    
-   - [ ] asd
+   - [ ] A username name secret password vty mode subcommand
    
-   - [ ] asd
+   - [ ] A username name secret password global configuration command
    
-   - [ ] asd
+   - [ ] A login local vty mode subcommand
    
-   - [ ] asd
+   - [ ] A transport input ssh global configuration command
 
 ### Bật IP cho Remote Access
 
-4. asd
+4. An engineer’s desktop PC connects to a switch at the main site. A router at the main site connects to each branch office through a serial link, with one small router and switch at each branch. Which of the following commands must be configured on the branch office switches, in the listed configuration mode, to allow the engineer to telnet to the branch office switches and supply only a password to login? (Choose three
+   answers.)
    
-   - [ ] asd
+   - [ ] The ip address command in interface configuration mode
    
-   - [ ] asd
+   - [ ] The ip address command in global configuration mode
    
-   - [ ] asd
+   - [ ] The ip default-gateway command in VLAN configuration mode
    
-   - [ ] asd
+   - [ ] The ip default-gateway command in global configuration mode
+   
+   - [ ] The password command in console line configuration mode
+   
+   - [ ] The password command in vty line configuration mode
 
-5. asd
+5. A Layer 2 switch configuration places all its physical ports into VLAN 2. The IP addressing plan shows that address 172.16.2.250 (with mask 255.255.255.0) is reserved for use by this new LAN switch and that 172.16.2.254 is already configured on the router connected to that same VLAN. The switch needs to support SSH connections into the switch from any subnet in the network. Which of the following commands are part of the required configuration in this case? (Choose two answers.)
    
-   - [ ] asd
+   - [ ] The ip address 172.16.2.250 255.255.255.0 command in interface vlan 1 configuration mode.
    
-   - [ ] asd
+   - [ ] The ip address 172.16.2.250 255.255.255.0 command in interface vlan 2 configuration mode.
    
-   - [ ] asd
+   - [ ] The ip default-gateway 172.16.2.254 command in global configuration mode.
    
-   - [ ] asd
+   - [ ] The switch cannot support SSH because all its ports connect to VLAN 2, and the IP address must be configured on interface VLAN 1.
 
 ### Cài đặt hữu ích trong Lab
 
-6. asd
+6. Which of the following line subcommands tells a switch to wait until a show command’s output has completed before displaying log messages on the screen?
    
-   - [ ] asd
+   - [ ] logging synchronous
    
-   - [ ] asd
+   - [ ] no ip domain-lookup
    
-   - [ ] asd
+   - [ ] exec-timeout 0 0
    
-   - [ ] asd
+   - [ ] history size 15
 
 ## 4. Cấu hình và xác minh Switch Interface
 
 ### Cấu hình Switching Interfaces
 
-1. asd
+1. Which of the following describes a way to disable IEEE standard autonegotiation on a 10/100 port on a Cisco switch?
    
-   - [ ] asd
+   - [ ] Configure the negotiate disable interface subcommand
    
-   - [ ] asd
+   - [ ] Configure the no negotiate interface subcommand
    
-   - [ ] asd
+   - [ ] Configure the speed 100 interface subcommand
    
-   - [ ] asd
+   - [ ] Configure the duplex half interface subcommand
+   
+   - [ ] Configure the duplex full interface subcommand
+   
+   - [ ] Configure the speed 100 and duplex full interface subcommands
 
-2. asd
+2. In which of the following modes of the CLI could you configure the duplex setting for interface Fast Ethernet 0/5?
    
-   - [ ] asd
+   - [ ] User mode
    
-   - [ ] asd
+   - [ ] Enable mode
    
-   - [ ] asd
+   - [ ] Global configuration mode
    
-   - [ ] asd
+   - [ ] VLAN mode
+   
+   - [ ] Interface configuration mode
 
-3. asd
+3. A Cisco Catalyst switch connects with its Gigabit0/1 port to an end user’s PC. The end user, thinking the user is helping, manually sets the PC’s OS to use a speed of 1000Mbps and to use full duplex, and disables the use of autonegotiation. The switch’s G0/1 port has default settings for speed and duplex. What speed and duplex settings will the switch decide to use? (Choose two answers.)
    
-   - [ ] asd
+   - [ ] Full duplex
    
-   - [ ] asd
+   - [ ] Half duplex
    
-   - [ ] asd
+   - [ ] 10 Mbps
    
-   - [ ] asd
+   - [ ] 1000 Mbps
 
-### Phân tích trạng thái và thống kê Switch Interface 
+### Phân tích trạng thái và thống kê Switch Interface
 
-4. asd
+4. The output of the show interfaces status command on a 2960 switch shows interface Fa0/1 in a “disabled” state. Which of the following is true about interface Fa0/1? (Choose three answers.)
    
-   - [ ] asd
+   - [ ] The interface is configured with the shutdown command.
    
-   - [ ] asd
+   - [ ] The show interfaces fa0/1 command will list the interface with two status codes of administratively down and line protocol down.
    
-   - [ ] asd
+   - [ ] The show interfaces fa0/1 command will list the interface with two status codes of up and down.
    
-   - [ ] asd
+   - [ ] The interface cannot currently be used to forward frames.
+   
+   - [ ] The interface can currently be used to forward frames.
 
-5. asd
+5. Switch SW1 uses its Gigabit 0/1 interface to connect to switch SW2’s Gigabit 0/2 interface. SW2’s Gi0/2 interface is configured with the speed 1000 and duplex full commands. SW1 uses all defaults for interface configuration commands on its Gi0/1 interface. Which of the following are true about the link after it comes up? (Choose two answers.)
    
-   - [ ] asd
+   6. 
+      a. SW2’s G0/1 has been configured with a shutdown interface subcommand.
+      b. The two switches have been configured with different values on the speed interface
+      subcommand.
+      c. A duplex mismatch exists with SW1 set to full duplex.
+      d. A duplex mismatch exists with SW1 set to half duplex.
+   - [ ] The link works at 1000 Mbps (1 Gbps).
    
-   - [ ] asd
+   - [ ] SW1 attempts to run at 10 Mbps because SW2 has effectively disabled IEEE standard autonegotiation.
    
-   - [ ] asd
+   - [ ] The link runs at 1 Gbps, but SW1 uses half duplex and SW2 uses full duplex.
    
-   - [ ] asd
+   - [ ] Both switches use full duplex.
 
-6. asd
+6. Switch SW1 connects via a cable to switch SW2’s G0/1 port. Which of the following conditions is the most likely to cause SW1’s late collision counter to continue to increment?
    
-   - [ ] asd
+   - [ ] SW2’s G0/1 has been configured with a shutdown interface subcommand.
    
-   - [ ] asd
+   - [ ] The two switches have been configured with different values on the speed interface
+     subcommand.
    
-   - [ ] asd
+   - [ ] A duplex mismatch exists with SW1 set to full duplex.
    
-   - [ ] asd
+   - [ ] A duplex mismatch exists with SW1 set to half duplex.
+   
+   - [ ] 
+   
+   - [ ] 
+   
+   - [ ] 
