--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/3.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/3.md
@@ -2,6 +2,98 @@
 
 ## 1. Ethernet Virtual LANs
 
+### Khái niệm Virual LAN
+
+1. In a LAN, which of the following terms best equates to the term VLAN?
+   
+   - [ ] Collision domain
+   
+   - [ ] Broadcast domain
+   
+   - [ ] Subnet
+   
+   - [ ] Single switch
+   
+   - [ ] Trunk
+
+2. Imagine a switch with three configured VLANs. How many IP subnets are required,assuming that all hosts in all VLANs want to use TCP/IP?
+   
+   - [ ] 0
+   
+   - [ ] 1
+   
+   - [ ] 2
+   
+   - [ ] 3
+   
+   - [ ] You cannot tell from the information provided.
+
+3. Switch SW1 sends a frame to switch SW2 using 802.1Q trunking. Which of the answers describes how SW1 changes or adds to the Ethernet frame before forwarding the frame to SW2?
+   
+   - [ ] Inserts a 4-byte header and does change the MAC addresses
+   
+   - [ ] Inserts a 4-byte header and does not change the MAC addresses
+   
+   - [ ] Encapsulates the original frame behind an entirely new Ethernet header
+   
+   - [ ] None of the other answers are correct
+
+### Cấu hình và xác minh VLAN và VLAN trunking
+
+### Giải quyết sự cố về VLANs và VLAN Trucks
+
 ## 2. Khái niệm giao thức STP
 
+4. Imagine that you are told that switch 1 is configured with the dynamic auto paramete for trunking on its Fa0/5 interface, which is connected to switch 2. You have to configure switch 2. Which of the following settings for trunking could allow trunking to work? (Choose two answers.)
+   
+   - [ ] on 
+   
+   - [ ] dynamic auto
+   
+   - [ ] dynamic desirable
+   
+   - [ ] access
+   
+   - [ ] None of the other answers are correct.
+
+5. A switch has just arrived from Cisco. The switch has never been configured with any VLANs, but VTP has been disabled. An engineer configures the vlan 22 and name Hannahs-VLAN commands and then exits configuration mode. Which of the following are true? (Choose two answers.)
+   
+   - [ ] VLAN 22 is listed in the output of the show vlan brief command.
+   
+   - [ ] VLAN 22 is listed in the output of the show running-config command.
+   
+   - [ ] VLAN 22 is not created by this process.
+   
+   - [ ] VLAN 22 does not exist in that switch until at least one interface is assigned to that VLAN.
+
+6. Which of the following commands identify switch interfaces as being trunking interfaces: interfaces that currently operate as VLAN trunks? (Choose two answers.)
+   
+   - [ ] show interfaces
+   
+   - [ ] show interfaces switchport
+   
+   - [ ] show interfaces trunk
+   
+   - [ ] show trunks
+
 ## 3. Cấu hình RSTP và EtherChannel
+
+7. In a switch that disables VTP, an engineer configures the commands vlan 30 and shutdown vlan 30. Which answers should be true about this switch? (Choose two answers.)
+   
+   - [ ] The show vlan brief command should list VLAN 30.
+   
+   - [ ] The show running-config command should list VLAN 30.
+   
+   - [ ] The switch should forward frames that arrive in access ports in VLAN 30.
+   
+   - [ ] The switch should forward frames that arrive in trunk ports tagged with VLAN 30.
+
+8. The show interfaces g0/1 trunk command provides three lists of VLAN IDs. Which items would limit the VLANs that appear in the first of the three lists of VLANs?
+   
+   - [ ] A shutdown vlan 30 global command
+   
+   - [ ] A switchport trunk allowed vlan interface subcommand
+   
+   - [ ] An STP choice to block on G0/1
+   
+   - [ ] A no vlan 30 global command
