--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/5.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/5.md
@@ -1,1 +1,9 @@
 # Bài 5: IPv4 Routing
+
+## 1.Các hoạt động của Router Cisco
+
+## 2.Cấu hình mạng IPv4 và router tĩnh
+
+## 3.Vạch đường IP trên mạng LAN
+
+## 4.Xử lý sự cố trên vạch đường IPv4
