--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/7.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/7.md
@@ -1,1 +1,9 @@
 # Bài 7: IPv6
+
+## 1.Thành phần của IPv6
+
+## 2.Địa chỉ IPv6 và Subnetting
+
+## 3.Triển khai mạng IPv6 trên router
+
+## 4.Triển khai vạch đường IPv6
