--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/8.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/8.md
@@ -1,1 +1,9 @@
 # Bài 8: Wireless LANs
+
+## 1.Thành phần của mạng wireless
+
+## 2.Phân tích kiến trúc mạng Wireless Cisco
+
+## 3.Bảo mật bảng wireless
+
+## 4.Xây dụng mạng wireless LAN
