--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/4.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/4.md
@@ -1,9 +1,244 @@
 # Bài 4: Triển khai IPv4
 
-## 1.
+## 1.Quan niệm về IPv4 subnetting
 
-## 2.
+### Cơ bản về STP và RSTP
 
-## 3.
+1. Which of the following port states are stable states used when STP has completed convergence? (Choose two answers.)
+   
+   - [ ] Blocking
+   
+   - [ ] Forwarding
+   
+   - [ ] Listening
+   
+   - [ ] Learning
+   
+   - [ ] Discarding
 
-## 4.
+2. Which of the following bridge IDs wins election as root, assuming that the switches
+   with these bridge IDs are in the same network?
+   
+   - [ ] 32769:0200.1111.1111
+   
+   - [ ] 32769:0200.2222.2222
+   
+   - [ ] 4097:0200.1111.1111
+   
+   - [ ] 4097:0200.2222.2222
+   
+   - [ ] 40961:0200.1111.1111
+
+3. Which of the following are transitory port states used only during the process of STP convergence? (Choose two answers.)
+   
+   - [ ] Blocking
+   
+   - [ ] Forwarding
+   
+   - [ ] Listening
+   
+   - [ ] Learning
+   
+   - [ ] Discarding
+
+4. Which of the following facts determines how often a nonroot bridge or switch sends an STP Hello BPDU message?
+   
+   - [ ] The Hello timer as configured on that switch.
+   
+   - [ ] The Hello timer as configured on the root switch.
+   
+   - [ ] It is always every 2 seconds.
+   
+   - [ ] The switch reacts to BPDUs received from the root switch by sending another BPDU 2 seconds after receiving the root BPDU.
+
+### Khái niệm Rapid STP
+
+5. Which of the following RSTP port states have the same name and purpose as a port state in traditional STP? (Choose two answers.)
+- [ ] Blocking
+
+- [ ] Forwarding
+
+- [ ] Listening
+
+- [ ] Learning
+
+- [ ] Discarding
+6. RSTP adds features beyond STP that enable ports to be used for a role if another port on the same switch fails. Which of the following statements correctly describe a port role that is waiting to take over for another port role? (Choose two answers.)
+   
+   - [ ] An alternate port waits to become a root port.
+   
+   - [ ] A backup port waits to become a root port.
+   
+   - [ ] An alternate port waits to become a designated port.
+   
+   - [ ] A backup port waits to become a designated port.
+
+7. What STP feature causes an interface to be placed in the forwarding state as soon as
+   the interface is physically acti ?
+   
+   - [ ] STP
+   
+   - [ ] EtherChannel
+   
+   - [ ] Root Guard
+   
+   - [ ] PortFast
+
+## 2.Phân tích mạng phân lớp IPv4
+
+### Hiểu sâu về cấu hình RSTP
+
+1. Which type value on the spanning-tree mode type global command enables the use of RSTP?
+- [ ] rapid-pvst
+
+- [ ] pvst
+
+- [ ] rstp 
+
+- [ ] rpvst
+2. Examine the following output from the show spanning-tree vlan 5 command, which describes a root switch in a LAN. Which answers accurately describe facts related to the root’s bridge ID?
+- [ ] The system ID extension value, in decimal, is 5.
+- [ ] The root’s configured priority value is 32773.
+- [ ] The root’s configured priority value is 32768.
+- [ ] The system ID extension value, in hexadecimal, is 1833.9d7b.0e80.
+3. With the Cisco RPVST+, which of the following action(s) does a switch take to identify
+   which VLAN is described by a BPDU? (Choose three answers.)
+   - [ ] Adds a VLAN tag when forwarding a BPDU on trunks
+     b. Adds the VLAN ID in an extra TLV in the BPDU
+     c. Lists the VLAN ID as the middle 12 bits of the System ID field of the BPDU
+     d. Lists the VLAN ID in the System ID Extension field of the BPDU
+
+### Triển khai EtherChanel
+
+An engineer configures a switch to put interfaces G0/1 and G0/2 into the same Layer 2
+EtherChannel. Which of the following terms is used in the configuration commands?
+
+- [ ] EtherChannel
+  b. PortChannel
+  c. Ethernet-Channel
+  d. Channel-group
+5. Which combinations of keywords on the channel-group interface subcommand on
+   two neighboring switches will cause the switches to use LACP and attempt to add the
+   link to the EtherChannel? (Choose two answers.)
+   - [ ] desirable and active
+     b. passive and active
+     c. active and auto
+     d. active and active
+   6. A Cisco Catalyst switch needs to send frames over a Layer 2 EtherChannel. Which
+      answer best describes how the switch balances the traffic over the four active links in
+      the chann- [ ] ?
+      a. Breaks each frame into fragments of approximately one-fourth of the original
+      frame, sending one fragment over each link
+      b. Sends the entire frame over one link, alternating links in sequence for each successive
+      frame
+      c. Sends the entire frame over one link, choosing the link by applying some math to
+      fields in each frame’s headers
+      d. Sends the entire frame over one link, using the link with the lowest percent utilization
+      as the next link to use
+
+## 3.Phân tích subnet mask
+
+### Phân tích yêu cầu
+
+1. Host A is a PC, connected to switch SW1 and assigned to VLAN 1. Which of the following are typically assigned an IP address in the same subnet as host A? (Choose two answers.)
+- [ ] The local router’s WAN interface
+
+- [ ] The local router’s LAN interface
+
+- [ ] All other hosts attached to the same switch
+
+- [ ] Other hosts attached to the same switch and also in VLAN 1
+2. Why does the formula for the number of hosts per subnet (2H – 2) require the subtraction of two hosts?
+   
+   - [ ] To reserve two addresses for redundant default gateways (routers)
+   
+   - [ ] To reserve the two addresses required for DHCP operation
+   
+   - [ ] To reserve addresses for the subnet ID and default gateway (router)
+   
+   - [ ] To reserve addresses for the subnet broadcast address and subnet ID
+
+3. A Class B network needs to be subnetted such that it supports 100 subnets and 100 hosts/subnet. Which of the following answers list a workable combination for the number of network, subnet, and host bits? (Choose two answers.)
+   
+   - [ ] Network = 16, subnet = 7, host = 7
+   - [ ] Network = 16, subnet = 8, host = 8
+   - [ ] Network = 16, subnet = 9, host = 7
+   - [ ] Network = 8, subnet = 7, host = 17
+
+### Lựa chọn thiết kế
+
+4. Which of the following are private IP networks? (Choose two answers.)
+   - [ ] 172.31.0.0
+   - [ ] 172.32.0.0
+   - [ ] 192.168.255.0
+   - [ ] 192.1.168.0
+   - [ ] 11.0.0.0
+5. Which of the following are public IP networks? (Choose three answers.)
+   - [ ] 9.0.0.0
+   - [ ] 172.30.0.0
+   - [ ] 192.168.255.0
+   - [ ] 192.1.168.0
+   - [ ] 1.0.0.0
+
+Before Class B network 172.16.0.0 is subnetted by a network engineer, what parts of the structure of the IP addresses in this network already exist, with a specific size? (Choose two answers.)
+
+- [ ] Network
+
+- [ ] Subnet
+
+- [ ] Host
+
+- [ ] Broadcast
+7. A network engineer spends time thinking about the entire Class B network 172.16.0.0
+   and how to subnet that network. He then chooses how to subnet this Class B network
+   and creates an addressing and subnetting plan, on paper, showing his choices.
+   If you compare his thoughts about this network before subnetting the network to his
+   thoughts about this network after mentally subnetting the network, which of the following
+   occurred to the parts of the structure of addresses in this network?
+   - [ ] The subnet part got smaller.
+     b. The host part got smaller.
+     c. The network part got smaller.
+     d. The host part was removed.
+     e. The network part was removed.
+
+## 4.Phân tích subnet hiện có
+
+### Khái niệm mạng phân lớp
+
+Which of the following are not valid Class A network IDs? (Choose two answers.)
+
+- [ ] 1.0.0.0
+
+- [ ] 130.0.0.0
+
+- [ ] 127.0.0.0
+
+- [ ] 9.0.0.0
+2. Which of the following are not valid Class B network IDs?
+   - [ ] 130.0.0.0
+   - [ ] 191.255.0.0
+   - [ ] 128.0.0.0
+   - [ ] 150.255.0.0
+   - [ ] All are valid Class B network IDs.
+3. Which of the following are true about IP address 172.16.99.45’s IP network? (Choose two answers.)
+   - [ ] The network ID is 172.0.0.0.
+   
+   - [ ] The network is a Class B network.
+   
+   - [ ] The default mask for the network is 255.255.255.0.
+   
+   - [ ] The number of host bits in the unsubnetted network is 16.
+
+4. Which of the following are true about IP address 192.168.6.7’s IP network? (Choose two answers.)
+   - [ ] The network ID is 192.168.6.0.
+   - [ ] The network is a Class B network.
+   - [ ] The default mask for the network is 255.255.255.0.
+   - [ ] The number of host bits in the unsubnetted network is 16.
+5. Which of the following is a network broadcast address ?
+   - [ ] 10.1.255.255
+   
+   - [ ] 192.168.255.1
+   
+   - [ ] 224.1.1.255
+   
+   - [ ] 172.30.255.255
