--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/1.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/1.md
@@ -34,7 +34,7 @@
    
    - [x] PPP
 
-3. Quá trình của `HTTP` yêu cầu `TCP` gửi data và đảm bảo rằng nó nhận chính xác ví dụ cho điều gì ? 
+3. Quá trình của `HTTP` yêu cầu `TCP` gửi data và đảm bảo rằng nó nhận chính xác ví dụ cho điều gì? 
    
    - [ ] Tương tác cùng một layer
    
@@ -56,7 +56,7 @@
    
    - [ ] Tất cả đều đúng
 
-5. Quá trình của một `web server` thêm một `TCP header` vào nội dung của trang web, được thực hiện bằng cách thêm `IP header` và thêm `data-link header` và `trailer`, đó là ví dụ nào sau đây ?
+5. Quá trình của một **web server** thêm một `TCP header` vào nội dung của trang web, được thực hiện bằng cách thêm `IP header` và thêm **data-link** `header` và `trailer`, đó là ví dụ nào sau đây ?
    
    - [x] Đóng gói dữ liệu
    
@@ -68,7 +68,7 @@
 
 ### Thuật ngữ đóng gói dữ liệu
 
-6. Thuật ngữ nào sao đây sử dụng cụ thể để xác định thực thể được tạo khi đóng gói dữ liệu trong lớp `data-link` header và trailers ? 
+6. Thuật ngữ nào sao đây sử dụng cụ thể để xác định thực thể được tạo khi đóng gói dữ liệu trong lớp **data-link** `headers` và `trailers` ? 
    
    - [ ] Data
    
@@ -96,7 +96,7 @@
 
 ### Tổng quan về LANs
 
-1. Trong mạng LAN của một văn phòng nhỏ, một số thiết bị người dùng kết nối LAN bằng cáp quang, trong khi một số người dùng thì kết nối không dây. Điều nào sau đây đúng về việc sử dụng kết nối Ethernet trong mạng LAN này ?
+1. Trong mạng `LAN` của một văn phòng nhỏ, một số thiết bị người dùng kết nối `LAN` bằng **cable**, trong khi một số người dùng thì kết nối **wireless**. Điều nào sau đây đúng về việc sử dụng kết nối `Ethernet` trong mạng `LAN` này ?
    
    - [x] Chỉ thiết bị kết nối bằng cables là sử dụng Ethernet
    
@@ -106,7 +106,7 @@
    
    - [ ] Khôn có thiết bị nào sử dụng Ethernet
 
-2. Chuẩn Ethernet nào sau đây định nghĩa Gigabit Ethernet thông qua cáp UTP ? 
+2. Chuẩn Ethernet nào sau đây định nghĩa `Gigabit Ethernet` thông qua cáp `UTP` ? 
    
    - [ ] 10GBASE-T
    
@@ -118,7 +118,7 @@
 
 ### Xây dựng Ethernet LANs vật lý bằng UTP
 
-3. Câu nào sau đây đúng về cáp chéo Ethernet cho Fast Ethernet
+3. Câu nào sau đây đúng về **crossover cable** `Ethernet` cho `Fast Ethernet`
    
    - [ ] Pins `1` và `2` đảo ngược trên đầu kia của cáp
    
@@ -130,7 +130,7 @@
    
    - [ ] Tất cà đều sai
 
-4. Mỗi câu trả lời liệt kê 2 thiết bị sử dụng mạng `100BASE-T`. Nếu các thiết bị này kết nối bằng cáp Ethernet `UTP`, cặp thiết bị nào yêu cầu cáp `straight-through` (*chọn 3 kết quả*)
+4. Mỗi câu trả lời liệt kê 2 thiết bị sử dụng mạng `100BASE-T`. Nếu các thiết bị này kết nối bằng cáp `Ethernet UTP`, cặp thiết bị nào yêu cầu **cable straight-through** (*chọn 3 kết quả*)
    
    - [ ] PC và router
    
